--- a/3 курс/5/mach/semestrovaya/Semestr.ipynb
+++ b/3 курс/5/mach/semestrovaya/Semestr.ipynb
@@ -69,7 +69,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"/content/drive/MyDrive/Data/dataset_var3.csv\", sep = \";\") \n",
+        "df = pd.read_csv(\"dataset_var3.csv\", sep = \";\") \n",
         "df.head()"
       ],
       "metadata": {
